--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
-body{
-  background-color: #98ddca;
+Body{
+     font-family: 'Yomogi', cursive;
+     
+}
+h1{
+    margin-top:50px;
+    font-weight:bold;
+    
+    text-align:center;
+    font-family: 'Yomogi', cursive;
+}
+img{
+    height: 230px;
+    width: 230px;
+    
+}
+.myimage{
+    text-align:center;
+    padding-top:30px;
+    
+
+}
+.btndiv{
+    text-align:center;
+}
+p{
+    text-align:center;
+    
+}
+h3{
+    text-align:center;
+    font-weight:bold;
+    text-decoration-line: underline;
+    
+}
+.btn {
+     margin:25px 25px;
 }
